CS_SBOX_20150209_01/Metadata/unpackaged/objects/Round_Robin__c.object
<CustomObject>
    <description>This Object stores details to be used in all the Round Robin allocation processes</description>
    <fields>
        <fullName>Assign_Records__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Specifies whether records should be assigned to the user referenced by this rule. Allows for users to temporarily be taken out of the round robin processing</description>
        <label>Assign Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Email notification will be sent to the user&apos;s manager when checked</description>
        <label>CC Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>Dependent on the Object type pick list this determines the Group that this rule belongs to</description>
        <label>Group</label>
        <picklist>
            <controllingField>Object_Type__c</controllingField>
            <picklistValues>
                <fullName>Customer Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Gen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Biz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OnSite/Consult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Marketing New Biz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Lead Gen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Biz (Broadcast Response)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Biz (International Response)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Include_Emails__c</fullName>
        <description>These are emails that should be included when sending emails for that Group</description>
        <inlineHelpText>When including multiple emails, please separate by a semi-colon.</inlineHelpText>
        <label>Include Emails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Allocated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was this the last Round Robin record to be allocated a Record</description>
        <label>Last Allocated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Hot_Leads_Monthly__c</fullName>
        <label>Max Hot Leads Monthly</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Warm_Leads_Monthly__c</fullName>
        <label>Max Warm Leads Monthly</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Records_Assigned__c</fullName>
        <description>Shows the total number of records assigned</description>
        <label>Number of Records Assigned</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <description>The type of Object to apply this rule to</description>
        <label>Object Type</label>
        <picklist>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Print Quote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Open_Hot_Leads_This_Month__c</fullName>
        <label>Open Hot Leads This Month</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Opps__c</fullName>
        <label>Open Opps</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Warm_Leads_This_Month__c</fullName>
        <label>Open Warm Leads This Month</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <description>Created by LM on 10/29/2013 for Phase 2 rollout</description>
        <label>Process</label>
        <picklist>
            <picklistValues>
                <fullName>Broadcast Lead Assignments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Services Task Assignments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Services US Monitoring Email Assignments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Services US Support Email Assignments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Lead Assignments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Gen Lead Assignments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Biz Lead Assignments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal Lead Assignments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal Opportunity Assignments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training At Risk Assignments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training On-Site and Consult Assignments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training US Training Email Assignments</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Store_Stats__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Should a log be kept of all records allocated to this User</description>
        <label>Store Stats</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Group__c</fullName>
        <label>Sub Group</label>
        <picklist>
            <controllingField>Group__c</controllingField>
            <picklistValues>
                <fullName>BASIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAJOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NATIONAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verification Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Small Business Outreach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PitchEngine Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BROADCAST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Available_Potential__c</fullName>
        <label>Total Available Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the user who should be assigned a Record</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Round_Robin</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Round Robin</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>Sub_Group__c</columns>
        <columns>User__c</columns>
        <columns>Last_Allocated__c</columns>
        <columns>Assign_Records__c</columns>
        <columns>Number_of_Records_Assigned__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Client_Services_Monitoring_Emails</fullName>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>Sub_Group__c</columns>
        <columns>User__c</columns>
        <columns>Last_Allocated__c</columns>
        <columns>Assign_Records__c</columns>
        <columns>Number_of_Records_Assigned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process__c</field>
            <operation>equals</operation>
            <value>Client Services US Monitoring Email Assignments</value>
        </filters>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>Monitoring</value>
        </filters>
        <filters>
            <field>Sub_Group__c</field>
            <operation>equals</operation>
        </filters>
        <label>Client Services: Monitoring Emails</label>
    </listViews>
    <listViews>
        <fullName>Client_Services_Support_Emails</fullName>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>Sub_Group__c</columns>
        <columns>User__c</columns>
        <columns>Last_Allocated__c</columns>
        <columns>Assign_Records__c</columns>
        <columns>Number_of_Records_Assigned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process__c</field>
            <operation>equals</operation>
            <value>Client Services US Support Email Assignments</value>
        </filters>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>Customer Services</value>
        </filters>
        <filters>
            <field>Sub_Group__c</field>
            <operation>equals</operation>
        </filters>
        <label>Client Services: Support Emails</label>
    </listViews>
    <listViews>
        <fullName>Client_Services_Verification_Calls</fullName>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>Sub_Group__c</columns>
        <columns>User__c</columns>
        <columns>Last_Allocated__c</columns>
        <columns>Assign_Records__c</columns>
        <columns>Number_of_Records_Assigned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process__c</field>
            <operation>equals</operation>
            <value>Client Services Task Assignments</value>
        </filters>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>Client Services</value>
        </filters>
        <label>Client Services: Verification Calls</label>
    </listViews>
    <listViews>
        <fullName>Leads_Broadcast</fullName>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>Sub_Group__c</columns>
        <columns>User__c</columns>
        <columns>Last_Allocated__c</columns>
        <columns>Assign_Records__c</columns>
        <columns>Number_of_Records_Assigned__c</columns>
        <columns>Max_Hot_Leads_Monthly__c</columns>
        <columns>Max_Warm_Leads_Monthly__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process__c</field>
            <operation>equals</operation>
            <value>Broadcast Lead Assignments</value>
        </filters>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>New Biz (Broadcast Response)</value>
        </filters>
        <filters>
            <field>Sub_Group__c</field>
            <operation>equals</operation>
        </filters>
        <label>Leads: Broadcast</label>
    </listViews>
    <listViews>
        <fullName>Leads_International</fullName>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>Sub_Group__c</columns>
        <columns>User__c</columns>
        <columns>Last_Allocated__c</columns>
        <columns>Assign_Records__c</columns>
        <columns>Number_of_Records_Assigned__c</columns>
        <columns>Max_Hot_Leads_Monthly__c</columns>
        <columns>Max_Warm_Leads_Monthly__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process__c</field>
            <operation>equals</operation>
            <value>International Lead Assignments</value>
        </filters>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>New Biz (International Response)</value>
        </filters>
        <filters>
            <field>Sub_Group__c</field>
            <operation>equals</operation>
        </filters>
        <label>Leads: International</label>
    </listViews>
    <listViews>
        <fullName>Leads_Lead_Gen</fullName>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>User__c</columns>
        <columns>Last_Allocated__c</columns>
        <columns>Assign_Records__c</columns>
        <columns>Number_of_Records_Assigned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process__c</field>
            <operation>equals</operation>
            <value>Lead Gen Lead Assignments</value>
        </filters>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>Lead Gen</value>
        </filters>
        <label>Leads: Lead Gen</label>
    </listViews>
    <listViews>
        <fullName>Leads_New_Biz_East_AM</fullName>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>Sub_Group__c</columns>
        <columns>User__c</columns>
        <columns>Last_Allocated__c</columns>
        <columns>Assign_Records__c</columns>
        <columns>Number_of_Records_Assigned__c</columns>
        <columns>Max_Hot_Leads_Monthly__c</columns>
        <columns>Open_Hot_Leads_This_Month__c</columns>
        <columns>Max_Warm_Leads_Monthly__c</columns>
        <columns>Open_Warm_Leads_This_Month__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process__c</field>
            <operation>equals</operation>
            <value>New Biz Lead Assignments</value>
        </filters>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>East</value>
        </filters>
        <filters>
            <field>Sub_Group__c</field>
            <operation>equals</operation>
            <value>AM</value>
        </filters>
        <label>Leads: New Biz East AM</label>
    </listViews>
    <listViews>
        <fullName>Leads_New_Biz_East_BDM</fullName>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>Sub_Group__c</columns>
        <columns>User__c</columns>
        <columns>Last_Allocated__c</columns>
        <columns>Assign_Records__c</columns>
        <columns>Max_Hot_Leads_Monthly__c</columns>
        <columns>Number_of_Records_Assigned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process__c</field>
            <operation>equals</operation>
            <value>New Biz Lead Assignments</value>
        </filters>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>East</value>
        </filters>
        <filters>
            <field>Sub_Group__c</field>
            <operation>equals</operation>
            <value>BDM</value>
        </filters>
        <label>Leads: New Biz East BDM</label>
    </listViews>
    <listViews>
        <fullName>Leads_New_Biz_West_AM</fullName>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>Sub_Group__c</columns>
        <columns>User__c</columns>
        <columns>Last_Allocated__c</columns>
        <columns>Assign_Records__c</columns>
        <columns>Number_of_Records_Assigned__c</columns>
        <columns>Max_Hot_Leads_Monthly__c</columns>
        <columns>Max_Warm_Leads_Monthly__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process__c</field>
            <operation>equals</operation>
            <value>New Biz Lead Assignments</value>
        </filters>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>West</value>
        </filters>
        <filters>
            <field>Object_Type__c</field>
            <operation>equals</operation>
            <value>Lead</value>
        </filters>
        <filters>
            <field>Sub_Group__c</field>
            <operation>equals</operation>
            <value>AM</value>
        </filters>
        <label>Leads: New Biz West AM</label>
    </listViews>
    <listViews>
        <fullName>Leads_New_Biz_West_BDM</fullName>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>Sub_Group__c</columns>
        <columns>User__c</columns>
        <columns>Last_Allocated__c</columns>
        <columns>Assign_Records__c</columns>
        <columns>Number_of_Records_Assigned__c</columns>
        <columns>Max_Hot_Leads_Monthly__c</columns>
        <columns>Open_Hot_Leads_This_Month__c</columns>
        <columns>Max_Warm_Leads_Monthly__c</columns>
        <columns>Open_Warm_Leads_This_Month__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process__c</field>
            <operation>equals</operation>
            <value>New Biz Lead Assignments</value>
        </filters>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>West</value>
        </filters>
        <filters>
            <field>Sub_Group__c</field>
            <operation>equals</operation>
            <value>BDM</value>
        </filters>
        <label>Leads: New Biz West BDM</label>
    </listViews>
    <listViews>
        <fullName>Leads_Renewals</fullName>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>Sub_Group__c</columns>
        <columns>User__c</columns>
        <columns>Last_Allocated__c</columns>
        <columns>Assign_Records__c</columns>
        <columns>Number_of_Records_Assigned__c</columns>
        <columns>Max_Hot_Leads_Monthly__c</columns>
        <columns>Max_Warm_Leads_Monthly__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process__c</field>
            <operation>equals</operation>
            <value>Renewal Lead Assignments</value>
        </filters>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>Renewals</value>
        </filters>
        <filters>
            <field>Sub_Group__c</field>
            <operation>equals</operation>
        </filters>
        <label>Leads: Renewals</label>
    </listViews>
    <listViews>
        <fullName>Opps_ALL_BASIC</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Assign_Records__c</columns>
        <columns>Last_Allocated__c</columns>
        <columns>Open_Opps__c</columns>
        <columns>Total_Available_Potential__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object_Type__c</field>
            <operation>equals</operation>
            <value>Opportunity</value>
        </filters>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>All</value>
        </filters>
        <filters>
            <field>Sub_Group__c</field>
            <operation>equals</operation>
            <value>BASIC</value>
        </filters>
        <label>Opps: ALL - BASIC</label>
    </listViews>
    <listViews>
        <fullName>Renewals_Basic</fullName>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>Sub_Group__c</columns>
        <columns>User__c</columns>
        <columns>Last_Allocated__c</columns>
        <columns>Assign_Records__c</columns>
        <columns>Number_of_Records_Assigned__c</columns>
        <columns>Open_Opps__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process__c</field>
            <operation>equals</operation>
            <value>Renewal Opportunity Assignments</value>
        </filters>
        <filters>
            <field>Sub_Group__c</field>
            <operation>equals</operation>
            <value>BASIC</value>
        </filters>
        <label>Renewals: Basic</label>
    </listViews>
    <listViews>
        <fullName>Renewals_Broadcast</fullName>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>Sub_Group__c</columns>
        <columns>User__c</columns>
        <columns>Last_Allocated__c</columns>
        <columns>Assign_Records__c</columns>
        <columns>Number_of_Records_Assigned__c</columns>
        <columns>Open_Opps__c</columns>
        <columns>Total_Available_Potential__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process__c</field>
            <operation>equals</operation>
            <value>Renewal Opportunity Assignments</value>
        </filters>
        <filters>
            <field>Sub_Group__c</field>
            <operation>equals</operation>
            <value>BROADCAST</value>
        </filters>
        <label>Renewals: Broadcast</label>
    </listViews>
    <nameField>
        <displayFormat>RR-{0000}</displayFormat>
        <label>Round Robin Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Round Robin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>